# kiteconnect-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
doc/: search-index.js
doc/implementors/core/fmt/: trait.Debug.js  trait.Display.js
doc/implementors/core/ops/deref/: trait.Deref.js
doc/implementors/std/error/: trait.Error.js
doc/kiteconnect_rust/: KiteConnect.t.html  enum.ErrorKind.html  index.html  sidebar-items.js  struct.Error.html  struct.KiteConnect.html  struct.UserAgent.html  struct.XKiteVersion.html  type.Result.html
doc/src/kiteconnect_rust/: lib.rs.html
examples/: connect_sample.rs  ticker_sample.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/ops/deref/: trait.DerefMut.js
implementors/error_chain/: trait.ChainedError.js
implementors/hyper/header/: trait.Header.js
implementors/kiteconnect_rust/: trait.ResultExt.js
kiteconnect_rust/: XKiteVersion.t.html  struct.Authorization.html  trait.ResultExt.html
mocks/: holdings.json  instruments.csv  margins.json  mf_instruments.csv  mf_orders.json  mf_orders_info.json  order_info.json  order_trades.json  orders.json  positions.json  profile.json  trades.json
src/: connect.rs  lib.rs  main.rs  serializers.rs  ticker.rs  types.rs
src/kiteconnect_rust/: lib.rs.html
