[package]
name = "kiteconnect"
version = "0.2.7"
authors = ["Joe Paul <joeirimpan@gmail.com>"]
description = "RUST API wrapper for kiteconnect APIs"
license = "MIT"
repository = "https://github.com/zerodhatech/kiteconnect-rust"
edition = "2018"

[dependencies]
reqwest = "0.9.0"
serde = "1.0.24"
serde_derive = "1.0.27"
serde_json = "1.0"
rust-crypto = "0.2.36"
url = "1.5"
byteorder = "1.2.1"
log = "0.4.1"
csv = "1.0.0-beta.5"
anyhow = "1.0"

[dependencies.ws]
version = "0.7.3"
features = ["ssl"]

[dev-dependencies]
mockito = "0.27.0"
