[package]
name = "kiteconnect"
version = "0.2.9"
authors = ["Joe Paul <joeirimpan@gmail.com>"]
description = "RUST API wrapper for kiteconnect APIs"
license = "MIT"
repository = "https://github.com/zerodhatech/kiteconnect-rust"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "0.2.36"
url = "1.5"
byteorder = "1.2.1"
log = "0.4.1"
csv = "1.0.0-beta.5"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }

[dependencies.ws]
version = "0.7.3"
features = ["ssl"]

[dev-dependencies]
mockito = "0.27.0"
